# mpv-tracker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
demo/: add-series.tape  mal-auth.tape  showcase.tape
src/mpv_tracker/: __init__.py  activity_store.py  animefiller.py  cli.py  config.py  library.py  mal.py  models.py  mpv_client.py  progress.py  service.py  settings_store.py  tui.py
tests/: test_import.py  test_service.py
