[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mpv-tracker"
version = "1.5.0"
description = "TUI app for tracking episodes in local series directories"
readme = "README.md"
requires-python = ">= 3.12"
license = { file = "LICENSE" }
authors = [{ name = "GenessyX", email = "haritonovgleb123@gmail.com" }]
dependencies = [
  "cyclopts>=3.8.0",
  "rich-pixels>=3.0.1",
  "textual>=0.79.1",
  "textual-image>=0.8.5",
]

[project.urls]
Homepage = "https://github.com/GenessyX/mpv-tracker"
Repository = "https://github.com/GenessyX/mpv-tracker"

[project.scripts]
mpv-tracker = "mpv_tracker.cli:run"

[dependency-groups]
debug = ["textual-dev>=1.7.0"]
local = ["prek"]
lint = ["ruff"]
types = ["mypy"]
tests = ["pytest"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "TD002", "TD003", "EXE", "ERA", "FIX", "INP001", "UP037"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105", "S311", "PLR2004", "FBT001"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]

[tool.pyright]
typeCheckingMode = "standard"
